--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-app": "^9.0.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "color": "^3.1.2",
     "connected-react-router": "^6.5.2",
     "css-loader": "2.1.1",
     "dotenv": "^8.1.0",
