--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
+    "skyway-js": "^2.0.3",
     "style-loader": "1.0.0",
     "styled-components": "^4.4.0",
     "terser-webpack-plugin": "1.4.1",
