--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@types/history": "^4.7.3",
-    "@types/jest": "24.0.18",
+    "@types/jest": "^24.0.23",
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
@@ -40,7 +40,7 @@
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
@@ -153,16 +153,17 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.2.4",
-    "@storybook/addon-info": "^5.2.4",
-    "@storybook/addon-knobs": "^5.2.4",
-    "@storybook/addon-links": "^5.2.4",
-    "@storybook/addon-notes": "^5.2.4",
-    "@storybook/addon-viewport": "^5.2.4",
-    "@storybook/addons": "^5.2.4",
-    "@storybook/react": "^5.2.4",
-    "@types/storybook__addon-info": "^4.1.2",
-    "@types/storybook__react": "^4.0.2",
-    "babel-plugin-styled-components": "^1.10.6"
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-info": "^5.2.8",
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addon-notes": "^5.2.8",
+    "@storybook/addon-viewport": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-styled-components": "^1.10.6",
+    "react-docgen-typescript-loader": "^3.6.0",
+    "ts-jest": "^24.2.0"
   }
 }
